syntax = "proto3";

package ch7.ex1;

option java_package = "uk.me.uohiro.protobuf.model.ch7.ex1";
option java_outer_classname = "ErrorManagementAPIProto";
option java_multiple_files = true;
option optimize_for = SPEED;

service ErrorManagement {
	rpc GetData(GetDataRequest) returns (GetDataResponse);
}

message GetDataRequest {
	string id = 1;
}

message GetDataResponse {
	string data = 2;
}
	
message ErrorDetail {
	string key = 1;
	string message = 2;
}

message ErrorDetails {
	repeated ErrorDetail details = 1;
}
